fix: wrap for graph flexbox when screen is small

--- a/Client/Pages/Counter.razor.css
+++ b/Client/Pages/Counter.razor.css
@@ -1,6 +1,7 @@
 ﻿.flex-container {
     display: flex;
     gap: 15px;
+    flex-wrap: wrap;
 }
 
 .grid-container {
